# COMP6991

./: starter.tar
Weekly Exercises/Week 0/: starter.tar
Weekly Exercises/Week 1/: starter.tar
Weekly Exercises/Week 1/Work/mini_grep/src/: README.org  main.rs
Weekly Exercises/Week 7/average_macro/src/: main.rs
Weekly Exercises/Week 7/fun_types/src/: main.rs
Weekly Exercises/Week 7/repetition/: flake.nix
Weekly Exercises/Week 8/train_game/: flake.nix
Workshops/Starter/: ws07.tar  ws09.tar
exam_q1/: q1_1.txt  q1_2.txt  q1_3.txt
exam_q2/src/: lib.rs
exam_q3/: q3_1.txt  q3_2.txt  q3_3.txt
exam_q4/: q4_1.txt  q4_2.txt  q4_3.txt
exam_q5/src/: lib.rs
exam_q6/: q6_1.txt  q6_2.txt
exam_q6/unsafe_review/src/: lib.rs
rsheets/: Cargo.toml  flake.nix  mark_request.txt
rsheets/src/: lib.rs  main.rs
rsheets/src/lib/: command.rs  graph.rs  mod.rs  server.rs  spreadsheet.rs
rslogo/: Cargo.toml  flake.nix
rslogo/docs/: design.md
rslogo/logo_examples/: 1_00_penup_pendown.lg
rslogo/src/: errors.rs  main.rs  parsers.rs  tokens.rs  turtle.rs
weekly/Sources/: w7.tar  w8.tar  w9.tar
weekly/Week 0/blazingly_fast/: Cargo.toml
weekly/Week 0/blazingly_fast/src/: main.rs
weekly/Week 0/starter/repeat/src/: README.org  main.rs
weekly/Week 1/Work/mini_grep/: Cargo.toml
weekly/Week 1/Work/mini_grep/src/: README.org  main.rs
weekly/Week 7/: .gitignore
weekly/Week 7/average_macro/: flake.nix
weekly/Week 7/average_macro/src/: main.rs
weekly/Week 7/currying/src/: main.rs
weekly/Week 7/fun_types/: flake.nix
weekly/Week 7/repetition/: flake.nix
weekly/Week 7/repetition/src/: main.rs
weekly/w8/channels/src/: main.rs
weekly/w8/send_sync/: questions.md
weekly/w8/train_game/: README.org
weekly/w8/train_game/src/: main.rs
weekly/w8/webserver/: flake.nix
weekly/w8/webserver/src/: main.rs
weekly/w9/myrc/src/: lib.rs
weekly/w9/rust2c/src/: main.rs
weekly/w9/unsound_unsafe/src/: main.rs
