[package]
name = "rsheet"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsheet"
path = "src/lib/mod.rs"

[[bin]]
name = "rsheet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
dashmap = "5.5.3"
env_logger = "0.11.3"
log = "0.4.21"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
petgraph = "0.6.4"
rayon = "1.10.0"
rsheet_lib = "0.1.2"
