[package]
name = "rslogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
nom = "7.1.3"
thiserror = "1.0.58"
unsvg = "1.1.1"
