[package]
name = "rslogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
thiserror = "1.0.58"
unsvg = "1.1.1"

[profile.dev]
# Multiple codegen units allow the compiler to parallelise compilation,
# but could also result in missed optimisations. Setting this to 1 makes
# the trade off between compile time and binary performance
codegen-units = 1

# General LLVM optimisations
lto = "fat"
opt-level = 3
